--- a/custom.css
+++ b/custom.css
@@ -1,9 +1,16 @@
 .title-slide {
   background-image: url('resources/logo-utilitr.png');
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: 4cm;
   background-color: white;
-}
+  background-position: 19cm 1cm;
+  text-align-last: center;
+  text-align: center;
+  margin-right: 0;
+  margin-left : 0;
+  border-top: 0;
 
+}
 
 .title-slide h1,h2,h3,p {
     /* 1 pixel black shadow to left, top, right and bottom */
