--- a/css/metropolis.css
+++ b/css/metropolis.css
@@ -14,7 +14,6 @@ table caption {
 /* Fin ajouts OM */
 
 
-
 .remark-slide-content {
   background-color: #FAFAFA;
   border-top: 80px solid #23373B;
@@ -35,7 +34,7 @@ table caption {
 
 /* Removes colored bar from top of the slide resulting in a clear slide */
 .clear{
-  border-top: 0px solid #FAFAFA;
+  border-top: 0px solid white;
 }
 
 h1 {
@@ -78,7 +77,7 @@ h2, h3, h4 {
 
 .title-slide {
   background-color: #FAFAFA;
-  border-top: 80px solid #FAFAFA;
+  border-top: 0;
 }
 
 .title-slide h1  {
