--- a/custom.css
+++ b/custom.css
@@ -12,3 +12,17 @@
 
 }
 
+
+h1 .remark-inline-code {
+  /* background: #F5F5F5; /* lighter */
+  background: #23373B; /* darker */
+  border-radius: 3px;
+  padding: 4px;
+}
+
+.title-slide h1 .remark-inline-code {
+  /* background: #F5F5F5; /* lighter */
+  background: #e7e8e2; /* darker */
+  border-radius: 3px;
+  padding: 4px;
+}
