--- a/css/metropolis.css
+++ b/css/metropolis.css
@@ -86,8 +86,9 @@ h2, h3, h4 {
   text-shadow: none;
   font-weight: 400;
   text-align: left;
+  font-size: 250%;
   margin-left: 15px;
-  padding-top: 80px;
+  padding-top: 250px;
 }
 .title-slide h2  {
   margin-top: -25px;
