--- a/css/metropolis.css
+++ b/css/metropolis.css
@@ -10,7 +10,10 @@ table caption {
   margin-top: 15px;
 }
 
-
+/* Eviter un conflit entre le logo et le premier paragraphe */
+.remark-slide-content > p:first-of-type {
+  margin-right: 3cm;
+}
 /* Fin ajouts OM */
 
 
