Améliorer la mise en page (conflit texte - logo)

--- a/css/metropolis.css
+++ b/css/metropolis.css
@@ -11,7 +11,8 @@ table caption {
 }
 
 /* Eviter un conflit entre le logo et le premier paragraphe */
-.remark-slide-content > p:first-of-type {
+.remark-slide-content > p:first-of-type,
+.remark-slide-content li:first-of-type {
   margin-right: 3cm;
 }
 
