--- a/css/metropolis.css
+++ b/css/metropolis.css
@@ -11,8 +11,7 @@ table caption {
 }
 
 /* Eviter un conflit entre le logo et le premier paragraphe */
-.remark-slide-content > p:first-of-type,
-.remark-slide-content li:first-of-type {
+.remark-slide-content > p:first-of-type {
   margin-right: 3cm;
 }
 
