--- a/custom.css
+++ b/custom.css
@@ -3,6 +3,13 @@ pre, code {
     color: #c7254e;
     background-color: #f9f2f4 !important;
 }
+ol > li {
+  margin-top: 1em;
+}
+li li {
+  margin-top: 0;
+}
+
 
 .title-slide {
   background-image: url('resources/logo-utilitr.png');
@@ -15,6 +22,10 @@ pre, code {
 .sauterligne{
   margin-top: 1em;
 }
+.sauterligne2{
+  margin-top: 2em;
+}
 .laisserligne{
   margin-bottom: 1em;
 }
+
