--- a/custom.css
+++ b/custom.css
@@ -10,6 +10,9 @@ li li {
   margin-top: 0;
 }
 
+.remark-slide-content {
+  padding: 1em 4em 1em 2em;
+}
 
 .title-slide {
   background-image: url('resources/logo-utilitr.png');
@@ -18,6 +21,7 @@ li li {
 .indent{
   margin-top: 30px;
   padding: 10px;
+  margin-right: 1cm;
 }
 .sauterligne{
   margin-top: 1em;
@@ -25,7 +29,15 @@ li li {
 .sauterligne2{
   margin-top: 2em;
 }
+.sauterligne3{
+  margin-top: 3em;
+}
 .laisserligne{
   margin-bottom: 1em;
 }
-
+.big{
+  font-size: 150%;
+}
+.small90{
+  font-size: 90%;
+}
