--- a/custom.css
+++ b/custom.css
@@ -1,13 +1,26 @@
 /* Contrôler la couleur du code inline */
-pre, code {
+code {
     color: #c7254e;
     background-color: #f9f2f4 !important;
+}
+pre > code[class="r hljs remark-code"] {
+    background-color: #eaeaea !important;
+}
+pre > code[class="remark-code"] > div[class="remark-code-line"] {
+    background-color: #f6f6f6 !important;
+}
+.remark-code {
+  font-size: 16px;
 }
 ol > li {
   margin-top: 1em;
 }
 li li {
   margin-top: 0;
+}
+
+h2 {
+  margin-bottom: 1.5rem;
 }
 
 .remark-slide-content {
@@ -19,7 +32,6 @@ li li {
 }
 
 .indent{
-  margin-top: 30px;
   padding: 10px;
   margin-right: 1cm;
 }
