Remettre le logo en relatif

--- a/custom.css
+++ b/custom.css
@@ -31,7 +31,7 @@ h2 {
 }
 
 .title-slide {
-  background-image: url('https://github.com/InseeFrLab/utilitr-presentation/blob/master/resources/logo-utilitr.png');
+  background-image: url('resources/logo-utilitr.png');
 }
 
 .indent{
