--- a/css/default-fonts.css
+++ b/css/default-fonts.css
@@ -1,3 +1,6 @@
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/solid.min.css);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/regular.min.css);
+
 @media print{
 
   /* Télécharger les typographies pour le corps de texte */
