--- a/custom.css
+++ b/custom.css
@@ -56,16 +56,7 @@ h2 {
 .small90{
   font-size: 90%;
 }
-.small80{
-  font-size: 80%;
-}
-.small70{
-  font-size: 70%;
-}
-.small60{
-  font-size: 60%;
-}
 
-.red {
-  color: red;
+img {
+  display: inline-block;
 }
