--- a/css/metropolis.css
+++ b/css/metropolis.css
@@ -2,7 +2,9 @@
   background-color: #FAFAFA;
   border-top: 80px solid #23373B;
   font-size: 21px;
+  /* Moi j'aime bien le gras
   font-weight: 300;
+  */
   line-height: 1.5;
   padding: 1em 2em 1em 2em
 }
