--- a/custom.css
+++ b/custom.css
@@ -63,10 +63,16 @@ h2 {
   font-size: 14px;
 }
 .small80{
-  font-size: 80% !important;
+  font-size: 80%;
+}
+.small80 code {
+  font-size: 13px;
 }
 .small70{
   font-size: 70%;
+}
+.small70 code {
+  font-size: 11px;
 }
 .small60{
   font-size: 60%;
