--- a/css/custom.css
+++ b/css/custom.css
@@ -31,7 +31,7 @@ h2 {
 }
 
 .title-slide {
-  background-image: url('logo-utilitr.png');
+  background-image: url('../resources/logo-utilitr.png');
 }
 .title-slide h2 {
   text-align: center;
@@ -65,14 +65,8 @@ h2 {
 .small80{
   font-size: 80%;
 }
-.small80 code {
-  font-size: 13px;
-}
 .small70{
   font-size: 70%;
-}
-.small70 code {
-  font-size: 11px;
 }
 .small60{
   font-size: 60%;
@@ -168,186 +162,4 @@ img {
   box-shadow: 5px 5px 15px 5px #999999 ;
   background-color: #EEF0E2;
   padding: 10px 10px 1px 10px;
-}
-
-
-
-/* IMAGES */
-
-.polaroid img {
-  display: block;
-  border: 10px solid #fff;
-  border-bottom: 45px solid #fff;
-  -webkit-box-shadow: 3px 3px 3px #111;
-  -moz-box-shadow: 3px 3px 3px #111;
-  box-shadow: 3px 3px 3px #111;
-}
-
-img {
-  display: block;
-  border: 0px solid #000;
-}
-
-.inverse img {
-  display: block;
-  border: 0px solid #000;
-}
-
-.noborder img {
-  display: block;
-  border: 0px solid #000;
-}
-
-.border img {
-  display: block;
-  border: 2px solid #000;
-}
-
-.borderthick img {
-  display: block;
-  border: 7px solid #000;
-}
-
-.whiteborder img {
-  display: block;
-  border: 2px solid #fff;
-}
-
-.whiteborderthick img {
-  display: block;
-  border: 7px solid #fff;
-}
-
-.circle img {
-  border-radius:50%;
-}
-
-.thumbnail img {
-  width: 15%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/*--- COLUMN LAYOUTS ---*/
-
-.cols3 {
-  width: 32%;
-  float: left;
-  text-align: left;
-  margin-left: 5px;
-  margin-right: 5px;
-}
-.leftcol {
-  float: left;
-  width: 49%;
-}
-.rightcol {
-  float: right;
-  width: 49%;
-}
-.leftcol55 {
-  float: left;
-  width: 54%;
-}
-.rightcol45 {
-  float: right;
-  width: 44%;
-}
-.leftcol45 {
-  float: left;
-  width: 44%;
-}
-.rightcol55 {
-  float: right;
-  width: 54%;
-}
-.leftcol60 {
-  float: left;
-  width: 59%;
-}
-.rightcol40 {
-  float: right;
-  width: 39%;
-}
-.leftcol40 {
-  float: left;
-  width: 39%;
-}
-.rightcol60 {
-  float: right;
-  width: 59%;
-}
-.leftcol65 {
-  float: left;
-  width: 64%;
-}
-.rightcol35 {
-  float: right;
-  width: 34%;
-}
-.leftcol35 {
-  float: left;
-  width: 34%;
-}
-.rightcol65 {
-  float: right;
-  width: 64%;
-}
-.leftcol70 {
-  float: left;
-  width: 69%;
-}
-.rightcol30 {
-  float: right;
-  width: 29%;
-}
-.leftcol30 {
-  float: left;
-  width: 29%;
-}
-.rightcol70 {
-  float: right;
-  width: 69%;
-}
-.leftcol75 {
-  float: left;
-  width: 74%;
-}
-.rightcol25 {
-  float: right;
-  width: 25%;
-}
-.leftcol25 {
-  float: left;
-  width: 25%;
-}
-.rightcol75 {
-  float: right;
-  width: 74%;
-}
-.leftcol80 {
-  float: left;
-  width: 79%;
-}
-.rightcol20 {
-  float: right;
-  width: 19%;
-}
-.leftcol20 {
-  float: left;
-  width: 19%;
-}
-.rightcol80 {
-  float: right;
-  width: 79%;
-}
-
-/* Background color for highlighted code */
-.remark-code-line-highlighted {
-  background-color: rgb(206, 233, 255);  /*light blue*/
-}
-
-pre {
-  margin: 0.5em 0;
 }
